# rapier-demo

./: README.md  index.html  package.json
.github/workflows/: build.yml  deploy.yml
src/: array-utils.test.ts  array-utils.ts  arrays.ts  box.ts  calculateZIndices.ts  color.frag  contour.ts  createArrow.ts  createDebugShape.ts  createPerlinNoise.ts  createStats.ts  createTriangleShader.ts  createWhiteNoiseTexture.ts  default.vert  game.ts  gameObject.ts  groupTriangles.test.ts  groupTriangles.ts  isPathClockwise.test.ts  isPathClockwise.ts  keyDownTracker.ts  linear-algebra.test.ts  linear-algebra.ts  main.ts  perlinNoise.frag  randomColor.ts  regular.vert  style.css  triangle.frag  triangle.ts  triangle.vert  triangulate.ts  vec.test.ts  vec.ts  vector.ts  whiteNoise.frag  zeros.ts
src/createGrassTexture/: createGrassTexture.ts  grassTexture.frag  index.ts
src/parseSvgPath/: SvgToken.ts  index.d.ts  index.ts  parseSvgPath.test.ts  parseSvgPath.ts  stringUtils.test.ts  stringUtils.ts
src/signal-processing/: douglasPeucker.ts  index.ts  radialDistance.ts
wasm-lib/: .gitignore  Cargo.toml
wasm-lib/pkg/: .gitignore  package.json  wasm_lib.d.ts  wasm_lib.js  wasm_lib_bg.js  wasm_lib_bg.wasm  wasm_lib_bg.wasm.d.ts
wasm-lib/src/: lib.rs
