[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["Johannes Lindgren <14206504+johannes-lindgren@users.noreply.github.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.90"
contour_tracing = { version = "1.0.12", features = ["array"] }